[package]
name = "starforged-bot"
description = "A Discord bot for making rolls for the Ironsworn - Starforged TTRPG"
version = "0.1.0"
edition = "2021"
authors = ["Chris Riches <chrisriches42@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/cjriches/starforged-bot"

[features]
download = ["chrono"]

[dependencies.chrono]
version = "0.4.19"
optional = true

[dependencies.logos]
version = "0.12.0"

[dependencies.rand]
version = "0.8.5"

[dependencies.serenity]
version = "0.10.10"

[dependencies.tokio]
version = "1.17.0"
features = ["rt-multi-thread", "macros"]
