[package]
name = "starforged-bot"
description = "A Discord bot for making rolls for the Ironsworn - Starforged TTRPG"
version = "0.1.0"
edition = "2021"
authors = ["Chris Riches <chrisriches42@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/cjriches/starforged-bot"

[features]
download = ["chrono"]

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.logos]
version = "0.14"

[dependencies.rand]
version = "0.8"

[dependencies.serenity]
version = "0.11"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]
